--- a/public/css/style-home.scss
+++ b/public/css/style-home.scss
@@ -174,7 +174,7 @@
         }
     }
     .bg-homeNew {
-        background: var(--White-Light, #F3F3F3);
+        background: linear-gradient( #FBF3EA, #FFFFFF);
     }
     .container {
         .justify-content-between.mt-homeNew {
