--- a/public/css/flea-market.scss
+++ b/public/css/flea-market.scss
@@ -791,7 +791,7 @@ input[type="range"]::-moz-range-thumb {
 
     .prices-pro {
         color: #FFFFFF;
-        font-size: 24px;
+        //font-size: 24px;
         font-style: normal;
         font-weight: 800;
         line-height: normal;
