--- a/public/css/style-home.css
+++ b/public/css/style-home.css
@@ -8,6 +8,12 @@
     width: 100%;
   }
 }
+@media (max-width: 779px) {
+  .krm-tieuDe-findDoctor {
+    width: 100%;
+    font-size: 24px;
+  }
+}
 @media (min-width: 780px) {
   .container {
     width: 100%;
@@ -55,6 +61,10 @@
   }
   .container .slide-container .slide img {
     width: 100%;
+  }
+  .container .krm-tieuDe-findDoctor {
+    width: 430px;
+    font-size: 24px;
   }
 }
 @media all {
@@ -608,12 +618,9 @@
     background-image: radial-gradient(circle at center, rgba(255, 193, 7, 0.3098039216) 5%, #FFFFFF 55%, #FFFFFF 0%);
   }
   .container .krm-tieuDe-findDoctor {
-    width: 430px;
     background: linear-gradient(90deg, #F2994A, #F2C94C);
-    /*background-color: #F2994A;*/
     color: white;
     border-radius: 0 0 120px 120px;
-    font-size: 24px;
   }
   .container .titleServiceHomeNew {
     color: #000;
@@ -632,7 +639,6 @@
     padding: 18px 8px;
     align-items: center;
     flex-shrink: 0;
-    margin-bottom: 14px;
     overflow: hidden;
   }
   .container .mainServiceHomeNew .col-md-6 .border-HomeNew .krm-select-bt, .container .mainServiceHomeNew .col-md-4 .border-HomeNew .krm-select-bt {
@@ -666,7 +672,7 @@
     color: #000;
     font-style: normal;
     font-weight: 800;
-    max-height: 60px;
+    max-height: 20px;
     display: -webkit-box;
     line-height: 1.3;
     -webkit-line-clamp: 2;
@@ -677,7 +683,7 @@
   .background-image_HomeNew--departments {
     background: url(../img/homeNew-img/background/Icon.png) no-repeat 100% 100%;
     background-size: 884px 1250px;
-    min-height: 1400px;
+    min-height: 1000px;
     display: flex;
     align-items: center;
   }
@@ -695,6 +701,16 @@
     border: 1px solid #088180;
     box-shadow: 0 8px 14px 0 rgba(0, 0, 0, 0.25);
   }
+  .bg-tuyen-dung .border-radius-homeNew:hover .arrow {
+    left: 10px;
+  }
+  .bg-tuyen-dung .border-radius-homeNew:hover .line {
+    width: 20px;
+  }
+  .bg-tuyen-dung .border-radius-homeNew:hover .show-learn-more {
+    font-weight: 800;
+    transition: 0.2s ease-in;
+  }
   .bg-tuyen-dung .border-radius-homeNew .krm-name-recruitment {
     color: #007E85;
     font-size: 18px;
@@ -705,7 +721,91 @@
     font-size: 14px;
     font-weight: 600;
   }
+  .bg-tuyen-dung .border-radius-homeNew #arrow-container {
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+  }
+  .bg-tuyen-dung .border-radius-homeNew .arrow {
+    position: absolute;
+    top: 45%;
+    left: 0;
+    transform: translateY(-50%);
+    font-size: 26px;
+    color: #088180;
+    transition: 0.2s ease-in;
+  }
+  .bg-tuyen-dung .border-radius-homeNew .show-learn-more {
+    font-size: 16px;
+    font-weight: 600;
+    color: #088180;
+  }
+  .bg-tuyen-dung .border-radius-homeNew .line {
+    position: absolute;
+    top: 50%;
+    left: 0px;
+    width: 20px;
+    height: 2px;
+    background-color: #088180;
+    transition: 0.2s ease-in;
+  }
+  .bg-tuyen-dung .krm-hover-buy-online:hover {
+    box-shadow: 0px -5px 12px 0px rgba(0, 0, 0, 0.2509803922) inset;
+    border-radius: 34px;
+    color: #088180;
+  }
+  .bg-tuyen-dung .krm-hover-buy-online:hover .img_product--homeNew img {
+    border-radius: 30px 30px 100px 0;
+  }
 }
+.mau-chu-dao {
+  color: #088180 !important;
+}
+
+.krm-img-news {
+  height: 370px;
+  border-radius: 16px;
+  object-fit: cover;
+}
+
+.krm-img-sub-news {
+  height: 95px;
+  border-radius: 8px;
+  object-fit: cover;
+}
+
+.krm-title-sub-news {
+  font-size: 16px;
+  font-weight: 800;
+  line-height: 20px;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  height: 40px;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+.krm-description-sub-news {
+  margin-top: 8px;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  height: 45px;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+.krm-description-sub-news p, .krm-description-sub-news span {
+  font-size: 12px;
+  font-weight: 600;
+  line-height: 15px;
+}
+
+.krm-title-news {
+  font-size: 24px;
+  font-weight: 800;
+  line-height: 30px;
+  margin-top: 16px;
+}
+
 .max-3-line-content {
   display: -webkit-box;
   -webkit-line-clamp: 3;
