--- a/public/css/style-home.scss
+++ b/public/css/style-home.scss
@@ -22,7 +22,9 @@
 }
 
 @media (max-width: 779px) {
-
+    .krm-tieuDe-findDoctor {
+        width: 100%;
+        font-size: 24px;}
 }
 
 @media (min-width: 780px) {
@@ -85,6 +87,10 @@
 
         .slide-container .slide img {
             width: 100%;
+        }
+        .krm-tieuDe-findDoctor {
+            width: 430px;
+            font-size: 24px;
         }
     }
 }
@@ -806,12 +812,9 @@
         }
 
         .krm-tieuDe-findDoctor {
-            width: 430px;
             background: linear-gradient(90deg, #F2994A, #F2C94C);
-            /*background-color: #F2994A;*/
             color: white;
             border-radius: 0 0 120px 120px;
-            font-size: 24px;
         }
 
         .titleServiceHomeNew {
@@ -834,7 +837,7 @@
                     padding: 18px 8px;
                     align-items: center;
                     flex-shrink: 0;
-                    margin-bottom: 14px;
+                    //margin-bottom: 14px;
                     overflow: hidden;
 
                     .krm-select-bt {
@@ -887,7 +890,7 @@
                 //font-size: 24px;
                 font-style: normal;
                 font-weight: 800;
-                max-height: 60px;
+                max-height: 20px;
                 display: -webkit-box;
                 line-height: 1.3;
                 -webkit-line-clamp: 2;
@@ -900,36 +903,139 @@
     .background-image_HomeNew--departments {
         background: url(../img/homeNew-img/background/Icon.png) no-repeat 100% 100%;
         background-size: 884px 1250px;
-        min-height: 1400px;
+        min-height: 1000px;
         display: flex;
         align-items: center;
     }
     .bg-tuyen-dung {
         background: linear-gradient(#088180, #08818003);
+
         .border-radius-homeNew {
             border-radius: 8px;
             border: 1px solid var(--Light, #EAEAEA);
             background: var(--White, #FFF);
             box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
             padding: 16px;
+
             &:hover {
                 border: 1px solid #088180;
                 box-shadow: 0 8px 14px 0 rgba(0, 0, 0, 0.25);
+
+                .arrow {
+                    left: 10px;
+                }
+
+                .line {
+                    width: 20px;
+                }
+
+                .show-learn-more {
+                    font-weight: 800;
+                    transition: 0.2s ease-in;
+                }
             }
+
             .krm-name-recruitment {
                 color: #007E85;
                 font-size: 18px;
                 font-weight: 800;
             }
+
             .krm-describe-recruitment {
                 margin: 8px 0;
                 font-size: 14px;
                 font-weight: 600;
             }
+
+            #arrow-container {
+                position: relative;
+                display: inline-block;
+                cursor: pointer;
+            }
+
+            .arrow {
+                position: absolute;
+                top: 45%;
+                left: 0;
+                transform: translateY(-50%);
+                font-size: 26px;
+                color: #088180;
+                transition: 0.2s ease-in;
+            }
+
+            .show-learn-more {
+                font-size: 16px;
+                font-weight: 600;
+                color: #088180;
+            }
+
+            .line {
+                position: absolute;
+                top: 50%;
+                left: 0px;
+                width: 20px;
+                height: 2px;
+                background-color: #088180;
+                transition: 0.2s ease-in;
+            }
+        }
+
+        .krm-hover-buy-online:hover {
+            box-shadow: 0px -5px 12px 0px #00000040 inset;
+            border-radius: 34px;
+            color: #088180;
+
+            .img_product--homeNew {
+                img {
+                    border-radius: 30px 30px 100px 0;
+                }
+            }
         }
     }
 }
+.mau-chu-dao{
+    color: #088180 !important;
+}
+.krm-img-news {
+    height: 370px;
+    border-radius: 16px;
+    object-fit: cover;
+}
+.krm-img-sub-news {
+    height: 95px;
+    border-radius: 8px;
+    object-fit: cover;
+}
+.krm-title-sub-news {
+    font-size: 16px;
+    font-weight: 800;
+    line-height: 20px;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    height: 40px;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+.krm-description-sub-news {
+    margin-top: 8px;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    height: 45px;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    p,span {
+        font-size: 12px;
+        font-weight: 600;
+        line-height: 15px;
 
+    }
+}
+.krm-title-news {
+    font-size: 24px;
+    font-weight: 800;
+    line-height: 30px;
+    margin-top: 16px;
+}
 .max-3-line-content {
     display: -webkit-box;
     -webkit-line-clamp: 3;
