--- a/public/css/homeSpecialist.scss
+++ b/public/css/homeSpecialist.scss
@@ -68,7 +68,7 @@
 
             span {
                 color: #000;
-                font-size: 24px;
+                //font-size: 24px;
                 font-style: normal;
                 font-weight: 800;
                 max-height: 60px;
