--- a/public/css/style-home.scss
+++ b/public/css/style-home.scss
@@ -1006,6 +1006,16 @@
     border-radius: 8px;
     object-fit: cover;
 }
+.krm-border-news-event {
+    border: 1px solid white;
+    padding: 8px;
+    &:hover {
+        box-shadow: 0px 4px 4px 0px #00000040;
+        border: 1px solid #088180;
+        border-radius: 12px;
+        padding: 8px;
+    }
+}
 .krm-title-sub-news {
     font-size: 16px;
     font-weight: 800;
