--- a/public/css/responsive-mobi.scss
+++ b/public/css/responsive-mobi.scss
@@ -1074,10 +1074,14 @@ img {
 
                 .clip-path-container {
                     height: 700px;
+                    background-color: #088180;
+                    clip-path: polygon(0% 0%, 101% 0%, 100% 84%, 0% 101%);
+                    border-radius: 50px;
+                    border-bottom: 20px solid #088180;
 
                     #allAddressesMap {
-                        border-radius: 24px;
-                        clip-path: polygon(0% 0%, 100% 0%, 100% 84%, 0% 100%, 0% 80%);
+                        border-radius: 50px;
+                        clip-path: polygon(0% 0%, 100% 0%, 100% 84%, 0% 101%, 0% 80%);
                     }
                 }
             }
