--- a/public/css/responsive-mobi.css
+++ b/public/css/responsive-mobi.css
@@ -130,7 +130,7 @@ img {
     margin-bottom: 16px;
   }
   .product-item .img-pro img {
-    height: 100%;
+    height: 200px;
     object-fit: cover;
   }
   .product-item .content-pro .name-product {
