--- a/public/css/responsive-mobi.scss
+++ b/public/css/responsive-mobi.scss
@@ -143,7 +143,7 @@ img {
         .img-pro {
             //height: 146px;
             img {
-                height: 100%;
+                height: 200px;
                 object-fit: cover;
             }
         }
