--- a/public/agora-video/style.css
+++ b/public/agora-video/style.css
@@ -6,6 +6,10 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 
+* {
+    font-family: 'Mulish, sans-serif';
+}
+
 main {
     width: 1400px;
     margin: 0 auto;
@@ -112,9 +116,253 @@ main {
     display: block;
     padding: 15px;
     background-color: #1f1f1f8e;
-    height: 30px;
-    width: 30px;
+    height: 50px;
+    width: 50px;
     border-radius: 10px;
+}
+
+
+.frame.component-medicine.w-100 {
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.max-1-line-title-widget-chat {
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+@media (max-width: 575px) {
+    .div .div-2 a .text-wrapper {
+        font-size: 12px;
+    }
+
+    .text-wrapper-4 {
+        font-size: 12px !important;
+    }
+}
+
+.find-my-medicine-2 .frame {
+    display: inline-flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 12px;
+    position: relative;
+    background-color: #088180;
+    border-radius: 24px;
+    border: 1px solid;
+    border-color: rgba(191, 191, 191, 1);
+}
+
+.find-my-medicine-2 .frame .rectangle {
+    position: relative;
+    object-fit: cover;
+}
+
+.find-my-medicine-2 .frame .div {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 16px;
+    position: relative;
+    align-self: stretch;
+    width: 100%;
+    flex: 0 0 auto;
+}
+
+.find-my-medicine-2 .frame .div-2 {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 8px;
+    padding: 0px 16px;
+    position: relative;
+    align-self: stretch;
+    width: 100%;
+    flex: 0 0 auto;
+}
+
+.find-my-medicine-2 .frame .text-wrapper {
+    position: relative;
+    width: fit-content;
+    margin-top: -1px;
+    font-weight: 800;
+    color: white;
+    font-size: 0px;
+    text-align: center;
+    letter-spacing: 0px;
+    line-height: normal;
+    font-style: normal;
+}
+
+.find-my-medicine-2 .frame .text-wrapper-3 {
+    position: relative;
+    width: fit-content;
+    font-weight: 800;
+    color: white;
+    font-size: 24px;
+    text-align: center;
+    letter-spacing: 0px;
+    line-height: normal;
+    font-style: normal;
+}
+
+.find-my-medicine-2 .frame .div-wrapper {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    padding: 16px 40px;
+    position: relative;
+    flex: 0 0 auto;
+    margin-bottom: -1px;
+    margin-right: -1px;
+    background-color: white;
+    border-radius: 60px 0px 24px 0px;
+    overflow: hidden;
+}
+
+.find-my-medicine-2 .frame .text-wrapper-4 {
+    position: relative;
+    width: fit-content;
+    font-weight: 800;
+    color: black;
+    font-size: 24px;
+    letter-spacing: 0px;
+    line-height: normal;
+    font-style: normal;
+}
+
+.find-my-medicine-2 .frame .img {
+    position: absolute;
+    width: 24px;
+    height: 24px;
+    top: 20px;
+    left: 225px;
+}
+
+
+.find-my-medicine-2 .text-wrapper.text-ellipsis {
+    text-overflow: ellipsis;
+}
+
+
+.find-my-medicine-2 .border-img {
+    border-radius: 13px 13px 100px 0px;
+    object-fit: cover;
+}
+
+.find-my-medicine .frame:hover, .find-my-medicine-2 .frame:hover {
+    border-radius: 22px;
+    background: #088180;
+    box-shadow: 0px 8px 10px 0px rgba(0, 0, 0, 0.25);
+}
+
+
+/* General button style */
+#widget-chat .btn {
+    border: none;
+    font-family: 'Lato';
+    font-size: inherit;
+    color: inherit;
+    background: none;
+    cursor: pointer;
+    display: inline-block;
+    letter-spacing: 1px;
+    outline: none;
+    position: relative;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    transition: all 0.3s;
+}
+
+#widget-chat .btn:after {
+    content: '';
+    position: absolute;
+    z-index: -1;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    transition: all 0.3s;
+}
+
+/* Pseudo elements for icons */
+#widget-chat .btn:before {
+    font-family: 'FontAwesome';
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+    position: relative;
+    -webkit-font-smoothing: antialiased;
+}
+
+
+#widget-chat .btn-sep:before {
+    background: rgba(0, 0, 0, 0.15);
+}
+
+/* Button 1 */
+#widget-chat .btn-1 {
+    background: #3498db;
+    color: #fff;
+    padding-left: 30px;
+}
+
+#widget-chat .btn-1:hover {
+    background: #2980b9;
+}
+
+#widget-chat .btn-1:active {
+    background: #2980b9;
+    top: 2px;
+}
+
+#widget-chat .btn-1:before {
+    position: absolute;
+    height: 100%;
+    left: 0;
+    top: 0;
+    line-height: 2;
+    width: 25px;
+}
+
+/* Button 2 */
+#widget-chat .btn-2 {
+    background: #2ecc71;
+    color: #fff;
+    padding-left: 30px;
+}
+
+#widget-chat .btn-2:hover {
+    background: #27ae60;
+}
+
+#widget-chat .btn-2:active {
+    background: #27ae60;
+    top: 2px;
+}
+
+#widget-chat .btn-2:before {
+    position: absolute;
+    height: 100%;
+    left: 0;
+    top: 0;
+    line-height: 2;
+    width: 25px;
+}
+
+/* Icons */
+
+#widget-chat .icon-cart:before {
+    content: "\f07a";
+}
+
+#widget-chat .icon-info:before {
+    content: "\f05a";
 }
 
 
