--- a/public/css/style-mobile.css
+++ b/public/css/style-mobile.css
@@ -36,6 +36,9 @@
 .nav .nav-item .nav-link.active,.nav .nav-item .nav-link{
     font-size: 24px;
 }
+#chat-widget-all-online,#chat-widget-connected{
+    font-size: 14px!important;
+}
 @media (max-width: 1400px) {
     .header .header-detail--left .back h5 {
         font-size: 16px;
