--- a/public/css/style-mobile.css
+++ b/public/css/style-mobile.css
@@ -34,7 +34,14 @@
     border: none;
 }
 .nav .nav-item .nav-link.active,.nav .nav-item .nav-link{
-    font-size: 24px;
+    font-size: 22px;
+}
+.container .danh-sach-theo-chuyen-khoa .nav-item .nav-link.active{
+    font-size: 22px!important;
+    padding: 8px 16px!important;
+}
+.container .danh-sach-theo-chuyen-khoa .nav-item .nav-link{
+    padding: 8px 16px!important;
 }
 #chat-widget-all-online,#chat-widget-connected{
     font-size: 14px!important;
@@ -48,6 +55,29 @@
     -webkit-line-clamp: 3;
     display: -webkit-box;
     -webkit-box-orient: vertical;
+}
+.title-specialList-clinics{
+    font-size: 22px!important;
+}
+.text-address{
+    font-size: 16px;
+    margin: 0 10px;
+}
+.clinicDistanceSpan{
+    font-size: 16px;
+}
+.time-working{
+    font-size: 14px!important;
+    margin-top: 5px;
+}
+.search-way{
+    font-size: 14px;
+    background-color: #ffa20d;
+    border-radius: 16px;
+    padding: 3px 12px;
+    margin-top: 10px;
+    display: inline-block;
+    color: white;
 }
 @media (max-width: 1400px) {
     .header .header-detail--left .back h5 {
@@ -532,6 +562,9 @@
     .nav .nav-item .nav-link.active,.nav .nav-item .nav-link{
         font-size: 16px;
     }
+    .container .danh-sach-theo-chuyen-khoa .nav-item .nav-link.active{
+        padding: 12px 16px!important;
+    }
 }
 
 @media (max-width: 767px) {
@@ -860,5 +893,11 @@
         min-height: 55px;
         max-height: 55px;
         font-size: 14px;
+    }
+    .address-specialList-clinics .text-address{
+        margin-bottom: 0px!important;
+    }
+    .container .danh-sach-theo-chuyen-khoa .nav-item .nav-link.active{
+        padding: 8px 16px!important;
     }
 }
