--- a/public/css/style-mobile.css
+++ b/public/css/style-mobile.css
@@ -79,6 +79,10 @@
     display: inline-block;
     color: white;
 }
+.box-about-doctor-specialist{
+    min-height: 72px;
+    max-height: 72px;
+}
 @media (max-width: 1400px) {
     .header .header-detail--left .back h5 {
         font-size: 16px;
@@ -564,6 +568,10 @@
     }
     .container .danh-sach-theo-chuyen-khoa .nav-item .nav-link.active{
         padding: 12px 16px!important;
+    }
+    .box-about-doctor-specialist{
+        min-height: 63px;
+        max-height: 63px;
     }
 }
 
