--- a/public/css/style-mobile.css
+++ b/public/css/style-mobile.css
@@ -57,7 +57,8 @@
     -webkit-box-orient: vertical;
 }
 .title-specialList-clinics{
-    font-size: 22px!important;
+    -webkit-line-clamp:2!important;
+    font-size: 20px!important;
 }
 .text-address{
     font-size: 16px;
@@ -82,6 +83,31 @@
 .box-about-doctor-specialist{
     min-height: 72px;
     max-height: 72px;
+}
+.box-list-clinic-address{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+#productInformation{
+    width: 32%;
+    height: 800px;
+    display: flex;
+    flex-direction: column;
+    overflow: auto;
+    flex-wrap: nowrap;
+}
+#allAddressesMap{
+    width: 68%;
+}
+.text-not-address{
+    font-size: 22px;
+}
+.img-special-line {
+    width: 100%;
+}
+.box-item__content {
+    flex-wrap: wrap;
 }
 @media (max-width: 1400px) {
     .header .header-detail--left .back h5 {
@@ -576,6 +602,25 @@
     .background-image_Clinics{
         margin-top: 70px!important;
     }
+    .box-list-clinic-address{
+        flex-wrap: wrap-reverse;
+    }
+    #productInformation{
+        width: 100%;
+        flex-direction: row;
+        height: auto;
+        margin-top: 30px;
+    }
+    #allAddressesMap{
+        width: 100%;
+        height: 600px!important;
+    }
+    .title-specialList-clinics{
+        font-size: 16px!important;
+    }
+    .text-not-address{
+        font-size: 18px;
+    }
 }
 
 @media (max-width: 767px) {
@@ -912,5 +957,8 @@
     }
     .container .danh-sach-theo-chuyen-khoa .nav-item .nav-link.active{
         padding: 8px 16px!important;
+    }
+    #productInformation {
+        margin-top: 5px;
     }
 }
