--- a/public/admin/css/style.css
+++ b/public/admin/css/style.css
@@ -1234,3 +1234,11 @@ h6 {
     width: 100%;
     text-overflow: ellipsis;
 }
+.form-prescription{
+    width: 50%;
+}
+@media (max-width: 768px) {
+    .form-prescription{
+        width: 100%;
+    }
+}
