--- a/public/css/loginNew.css
+++ b/public/css/loginNew.css
@@ -71,7 +71,7 @@
     font-weight: 800;
     line-height: normal;
   }
-    .popup .form .form-element input[type=text],.modal-body .popup .form .form-element #email, .modal-body .popup .form .form-element #password, .modal-body .popup .form .form-element #username, .modal-body .popup .form .form-element #passwordConfirm, .modal-body .popup .form .form-element #type, .modal-body .popup .form .form-element #member {
+    .popup .form .form-element input[type=text],.modal-body .popup .form .form-element #email, .modal-body .popup .form .form-element #password, .modal-body .popup .form .form-element #username, .modal-body .popup .form .form-element #passwordConfirm, .modal-body .popup .form .form-element #type, .modal-body .popup .form .form-element #member, .popup .form .form-element #password-header, .popup .form .form-element #phone {
     display: flex;
     width: 100%;
     height: 48px;
