--- a/public/css/chatmessage.css
+++ b/public/css/chatmessage.css
@@ -1,15 +1,16 @@
 
 #widget-chat #chat-circle {
     display: flex;
+    justify-content: center;
+    padding: 0;
+    align-items: center;
     position: fixed;
-    bottom: 50px;
-    right: 50px;
-    background: #5A5EB9;
-    width: 80px;
-    height: 80px;
-    border-radius: 50%;
+    bottom: 0;
+    right: 0;
+    background: #088180;
+    width: 120px;
+    height: 50px;
     color: white;
-    padding: 30px;
     cursor: pointer;
     box-shadow: 0px 3px 16px 0px rgba(0, 0, 0, 0.6), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
     z-index: 2;
