--- a/public/css/chatmessage.css
+++ b/public/css/chatmessage.css
@@ -6,10 +6,10 @@
     align-items: center;
     position: fixed;
     bottom: 0;
-    right: 0;
+    right: 0 !important;
     background: #088180;
-    width: 120px;
-    height: 50px;
+    width: 120px !important;
+    height: 50px !important;
     color: white;
     cursor: pointer;
     box-shadow: 0px 3px 16px 0px rgba(0, 0, 0, 0.6), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
