--- a/public/css/chatmessage.css
+++ b/public/css/chatmessage.css
@@ -39,7 +39,7 @@
     background: #f5f5f5;
     position: fixed;
     right: 0;
-    bottom: 0;
+    bottom: 20px;
     width: 400px;
     max-width: 85vw;
     max-height: 100vh;
@@ -212,6 +212,13 @@
     border-radius: 50%;
     box-shadow: 0 0 2px rgba(0, 0, 0, 0.3);
 }
+.offline-dot{
+    height: 7px;
+    width: 7px;
+    background-color: red; /* Green color for online status */
+    border-radius: 50%;
+    box-shadow: 0 0 2px rgba(0, 0, 0, 0.3);
+}
 #widget-chat #profile p {
     font-weight: 800;
     font-size: 15px;
@@ -351,9 +358,14 @@
     font-size: 14px;
     font-family: "Open Sans", sans-serif;
     font-weight: 400;
-    color: #aab8c2;
+    color: #333;
+    width: 300px;
 }
-
+@media screen and (max-width: 450px) {
+    #widget-chat #sendmessage input {
+        width: 232px;
+    }
+}
 #widget-chat #sendmessage input:focus {
     outline: 0;
 }
